solves / dark-blue on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -709,7 +709,7 @@ iframe {
 		margin-top: 0;
 	}
 	.light-blue, .dark-blue {
-		padding: 30px 0;
+		padding: 30px 10px;
 	}
 	.px18 {
 		font-size: 1rem;
